// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Color Palettes Plugin - Palette Generation > generatePalette > should accurately parse and generate a palette with alterations 1`] = `
{
  "100": {
    "chromakit": "ChromaKit|v1 oklch 0.95 0.052 163.051",
    "color": {
      "alpha": undefined,
      "c": 0.04386377581815611,
      "h": 141.3546194999646,
      "l": 0.946443423870834,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 100,
    "oklch": "oklch(94.64% 0.044 141.355)",
    "rgb": "#def5da",
  },
  "200": {
    "chromakit": "ChromaKit|v1 oklch 0.905 0.093 164.15",
    "color": {
      "alpha": undefined,
      "c": 0.07860399088432864,
      "h": 142.43741670676815,
      "l": 0.8981363978457823,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 200,
    "oklch": "oklch(89.81% 0.079 142.437)",
    "rgb": "#c0ebbb",
  },
  "300": {
    "chromakit": "ChromaKit|v1 oklch 0.845 0.143 164.978",
    "color": {
      "alpha": undefined,
      "c": 0.12807970793998427,
      "h": 143.1539356868069,
      "l": 0.8242673184204253,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 300,
    "oklch": "oklch(82.43% 0.128 143.154)",
    "rgb": "#92db8e",
  },
  "400": {
    "chromakit": "ChromaKit|v1 oklch 0.765 0.177 163.223",
    "color": {
      "alpha": undefined,
      "c": 0.15263407596405582,
      "h": 141.48519143051783,
      "l": 0.7419000113784764,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 400,
    "oklch": "oklch(74.19% 0.153 141.485)",
    "rgb": "#70c365",
  },
  "50": {
    "chromakit": "ChromaKit|v1 oklch 0.979 0.021 166.113",
    "color": {
      "alpha": undefined,
      "c": 0.019768163273517703,
      "h": 144.35067103576398,
      "l": 0.9749159564630707,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 50,
    "oklch": "oklch(97.49% 0.020 144.351)",
    "rgb": "#effbef",
  },
  "500": {
    "chromakit": "ChromaKit|v1 oklch 0.696 0.17 162.48",
    "color": {
      "alpha": undefined,
      "c": 0.14178625800967096,
      "h": 140.7952849902145,
      "l": 0.6765957743329425,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": true,
    "number": 500,
    "oklch": "oklch(67.66% 0.142 140.795)",
    "rgb": "#63ac56",
  },
  "600": {
    "chromakit": "ChromaKit|v1 oklch 0.596 0.145 163.225",
    "color": {
      "alpha": undefined,
      "c": 0.11454018489892535,
      "h": 141.5470881707392,
      "l": 0.5985350626260156,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 600,
    "oklch": "oklch(59.85% 0.115 141.547)",
    "rgb": "#56914e",
  },
  "700": {
    "chromakit": "ChromaKit|v1 oklch 0.508 0.118 165.612",
    "color": {
      "alpha": undefined,
      "c": 0.0938719450642882,
      "h": 143.9318312779427,
      "l": 0.5132394133765646,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 700,
    "oklch": "oklch(51.32% 0.094 143.932)",
    "rgb": "#437543",
  },
  "800": {
    "chromakit": "ChromaKit|v1 oklch 0.432 0.095 166.913",
    "color": {
      "alpha": undefined,
      "c": 0.07641550850861428,
      "h": 145.2277757205112,
      "l": 0.44037288913123795,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 800,
    "oklch": "oklch(44.04% 0.076 145.228)",
    "rgb": "#365e38",
  },
  "900": {
    "chromakit": "ChromaKit|v1 oklch 0.378 0.077 168.94",
    "color": {
      "alpha": undefined,
      "c": 0.06254623365679282,
      "h": 147.24622813365517,
      "l": 0.3881312254057823,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 900,
    "oklch": "oklch(38.81% 0.063 147.246)",
    "rgb": "#2c4e31",
  },
  "950": {
    "chromakit": "ChromaKit|v1 oklch 0.262 0.051 172.552",
    "color": {
      "alpha": undefined,
      "c": 0.04332797527372658,
      "h": 150.79027825002555,
      "l": 0.2768342611271985,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 950,
    "oklch": "oklch(27.68% 0.043 150.790)",
    "rgb": "#172e1d",
  },
  "arrayValues": [
    {
      "chromakit": "ChromaKit|v1 oklch 0.979 0.021 166.113",
      "color": {
        "alpha": undefined,
        "c": 0.019768163273517703,
        "h": 144.35067103576398,
        "l": 0.9749159564630707,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 50,
      "oklch": "oklch(97.49% 0.020 144.351)",
      "rgb": "#effbef",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.95 0.052 163.051",
      "color": {
        "alpha": undefined,
        "c": 0.04386377581815611,
        "h": 141.3546194999646,
        "l": 0.946443423870834,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 100,
      "oklch": "oklch(94.64% 0.044 141.355)",
      "rgb": "#def5da",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.905 0.093 164.15",
      "color": {
        "alpha": undefined,
        "c": 0.07860399088432864,
        "h": 142.43741670676815,
        "l": 0.8981363978457823,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 200,
      "oklch": "oklch(89.81% 0.079 142.437)",
      "rgb": "#c0ebbb",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.845 0.143 164.978",
      "color": {
        "alpha": undefined,
        "c": 0.12807970793998427,
        "h": 143.1539356868069,
        "l": 0.8242673184204253,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 300,
      "oklch": "oklch(82.43% 0.128 143.154)",
      "rgb": "#92db8e",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.765 0.177 163.223",
      "color": {
        "alpha": undefined,
        "c": 0.15263407596405582,
        "h": 141.48519143051783,
        "l": 0.7419000113784764,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 400,
      "oklch": "oklch(74.19% 0.153 141.485)",
      "rgb": "#70c365",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.696 0.17 162.48",
      "color": {
        "alpha": undefined,
        "c": 0.14178625800967096,
        "h": 140.7952849902145,
        "l": 0.6765957743329425,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": true,
      "number": 500,
      "oklch": "oklch(67.66% 0.142 140.795)",
      "rgb": "#63ac56",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.596 0.145 163.225",
      "color": {
        "alpha": undefined,
        "c": 0.11454018489892535,
        "h": 141.5470881707392,
        "l": 0.5985350626260156,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 600,
      "oklch": "oklch(59.85% 0.115 141.547)",
      "rgb": "#56914e",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.508 0.118 165.612",
      "color": {
        "alpha": undefined,
        "c": 0.0938719450642882,
        "h": 143.9318312779427,
        "l": 0.5132394133765646,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 700,
      "oklch": "oklch(51.32% 0.094 143.932)",
      "rgb": "#437543",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.432 0.095 166.913",
      "color": {
        "alpha": undefined,
        "c": 0.07641550850861428,
        "h": 145.2277757205112,
        "l": 0.44037288913123795,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 800,
      "oklch": "oklch(44.04% 0.076 145.228)",
      "rgb": "#365e38",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.378 0.077 168.94",
      "color": {
        "alpha": undefined,
        "c": 0.06254623365679282,
        "h": 147.24622813365517,
        "l": 0.3881312254057823,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 900,
      "oklch": "oklch(38.81% 0.063 147.246)",
      "rgb": "#2c4e31",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.262 0.051 172.552",
      "color": {
        "alpha": undefined,
        "c": 0.04332797527372658,
        "h": 150.79027825002555,
        "l": 0.2768342611271985,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 950,
      "oklch": "oklch(27.68% 0.043 150.790)",
      "rgb": "#172e1d",
    },
  ],
}
`;

exports[`Color Palettes Plugin - Palette Generation > generatePalette > should accurately parse and generate a palette with alterations preserving the original color 1`] = `
{
  "100": {
    "chromakit": "ChromaKit|v1 oklch 0.95 0.052 163.051",
    "color": {
      "alpha": undefined,
      "c": 0.04386377581815611,
      "h": 141.3546194999646,
      "l": 0.946443423870834,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 100,
    "oklch": "oklch(94.64% 0.044 141.355)",
    "rgb": "#def5da",
  },
  "200": {
    "chromakit": "ChromaKit|v1 oklch 0.905 0.093 164.15",
    "color": {
      "alpha": undefined,
      "c": 0.07860399088432864,
      "h": 142.43741670676815,
      "l": 0.8981363978457823,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 200,
    "oklch": "oklch(89.81% 0.079 142.437)",
    "rgb": "#c0ebbb",
  },
  "300": {
    "chromakit": "ChromaKit|v1 oklch 0.845 0.143 164.978",
    "color": {
      "alpha": undefined,
      "c": 0.12807970793998427,
      "h": 143.1539356868069,
      "l": 0.8242673184204253,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 300,
    "oklch": "oklch(82.43% 0.128 143.154)",
    "rgb": "#92db8e",
  },
  "400": {
    "chromakit": "ChromaKit|v1 oklch 0.765 0.177 163.223",
    "color": {
      "alpha": undefined,
      "c": 0.15263407596405582,
      "h": 141.48519143051783,
      "l": 0.7419000113784764,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 400,
    "oklch": "oklch(74.19% 0.153 141.485)",
    "rgb": "#70c365",
  },
  "50": {
    "chromakit": "ChromaKit|v1 oklch 0.979 0.021 166.113",
    "color": {
      "alpha": undefined,
      "c": 0.019768163273517703,
      "h": 144.35067103576398,
      "l": 0.9749159564630707,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 50,
    "oklch": "oklch(97.49% 0.020 144.351)",
    "rgb": "#effbef",
  },
  "500": {
    "chromakit": "ChromaKit|v1 oklch 0.6853745392013604 0.1336519117855785 140.8023463192477",
    "color": {
      "alpha": undefined,
      "c": 0.1336519117855785,
      "h": 140.8023463192477,
      "l": 0.6853745392013604,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": true,
    "number": 500,
    "oklch": "oklch(68.54% 0.134 140.802)",
    "rgb": "#69ae5d",
  },
  "600": {
    "chromakit": "ChromaKit|v1 oklch 0.596 0.145 163.225",
    "color": {
      "alpha": undefined,
      "c": 0.11454018489892535,
      "h": 141.5470881707392,
      "l": 0.5985350626260156,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 600,
    "oklch": "oklch(59.85% 0.115 141.547)",
    "rgb": "#56914e",
  },
  "700": {
    "chromakit": "ChromaKit|v1 oklch 0.508 0.118 165.612",
    "color": {
      "alpha": undefined,
      "c": 0.0938719450642882,
      "h": 143.9318312779427,
      "l": 0.5132394133765646,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 700,
    "oklch": "oklch(51.32% 0.094 143.932)",
    "rgb": "#437543",
  },
  "800": {
    "chromakit": "ChromaKit|v1 oklch 0.432 0.095 166.913",
    "color": {
      "alpha": undefined,
      "c": 0.07641550850861428,
      "h": 145.2277757205112,
      "l": 0.44037288913123795,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 800,
    "oklch": "oklch(44.04% 0.076 145.228)",
    "rgb": "#365e38",
  },
  "900": {
    "chromakit": "ChromaKit|v1 oklch 0.378 0.077 168.94",
    "color": {
      "alpha": undefined,
      "c": 0.06254623365679282,
      "h": 147.24622813365517,
      "l": 0.3881312254057823,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 900,
    "oklch": "oklch(38.81% 0.063 147.246)",
    "rgb": "#2c4e31",
  },
  "950": {
    "chromakit": "ChromaKit|v1 oklch 0.262 0.051 172.552",
    "color": {
      "alpha": undefined,
      "c": 0.04332797527372658,
      "h": 150.79027825002555,
      "l": 0.2768342611271985,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 950,
    "oklch": "oklch(27.68% 0.043 150.790)",
    "rgb": "#172e1d",
  },
  "arrayValues": [
    {
      "chromakit": "ChromaKit|v1 oklch 0.979 0.021 166.113",
      "color": {
        "alpha": undefined,
        "c": 0.019768163273517703,
        "h": 144.35067103576398,
        "l": 0.9749159564630707,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 50,
      "oklch": "oklch(97.49% 0.020 144.351)",
      "rgb": "#effbef",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.95 0.052 163.051",
      "color": {
        "alpha": undefined,
        "c": 0.04386377581815611,
        "h": 141.3546194999646,
        "l": 0.946443423870834,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 100,
      "oklch": "oklch(94.64% 0.044 141.355)",
      "rgb": "#def5da",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.905 0.093 164.15",
      "color": {
        "alpha": undefined,
        "c": 0.07860399088432864,
        "h": 142.43741670676815,
        "l": 0.8981363978457823,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 200,
      "oklch": "oklch(89.81% 0.079 142.437)",
      "rgb": "#c0ebbb",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.845 0.143 164.978",
      "color": {
        "alpha": undefined,
        "c": 0.12807970793998427,
        "h": 143.1539356868069,
        "l": 0.8242673184204253,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 300,
      "oklch": "oklch(82.43% 0.128 143.154)",
      "rgb": "#92db8e",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.765 0.177 163.223",
      "color": {
        "alpha": undefined,
        "c": 0.15263407596405582,
        "h": 141.48519143051783,
        "l": 0.7419000113784764,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 400,
      "oklch": "oklch(74.19% 0.153 141.485)",
      "rgb": "#70c365",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.6853745392013604 0.1336519117855785 140.8023463192477",
      "color": {
        "alpha": undefined,
        "c": 0.1336519117855785,
        "h": 140.8023463192477,
        "l": 0.6853745392013604,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": true,
      "number": 500,
      "oklch": "oklch(68.54% 0.134 140.802)",
      "rgb": "#69ae5d",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.596 0.145 163.225",
      "color": {
        "alpha": undefined,
        "c": 0.11454018489892535,
        "h": 141.5470881707392,
        "l": 0.5985350626260156,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 600,
      "oklch": "oklch(59.85% 0.115 141.547)",
      "rgb": "#56914e",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.508 0.118 165.612",
      "color": {
        "alpha": undefined,
        "c": 0.0938719450642882,
        "h": 143.9318312779427,
        "l": 0.5132394133765646,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 700,
      "oklch": "oklch(51.32% 0.094 143.932)",
      "rgb": "#437543",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.432 0.095 166.913",
      "color": {
        "alpha": undefined,
        "c": 0.07641550850861428,
        "h": 145.2277757205112,
        "l": 0.44037288913123795,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 800,
      "oklch": "oklch(44.04% 0.076 145.228)",
      "rgb": "#365e38",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.378 0.077 168.94",
      "color": {
        "alpha": undefined,
        "c": 0.06254623365679282,
        "h": 147.24622813365517,
        "l": 0.3881312254057823,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 900,
      "oklch": "oklch(38.81% 0.063 147.246)",
      "rgb": "#2c4e31",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.262 0.051 172.552",
      "color": {
        "alpha": undefined,
        "c": 0.04332797527372658,
        "h": 150.79027825002555,
        "l": 0.2768342611271985,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 950,
      "oklch": "oklch(27.68% 0.043 150.790)",
      "rgb": "#172e1d",
    },
  ],
}
`;

exports[`Color Palettes Plugin - Palette Generation > generatePalette > should accurately parse and generate a palette without alterations 1`] = `
{
  "100": {
    "chromakit": "ChromaKit|v1 oklch 0.95 0.052 163.051",
    "color": {
      "alpha": undefined,
      "c": 0.0408817612520593,
      "h": 141.37334631924767,
      "l": 0.95,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 100,
    "oklch": "oklch(95.00% 0.041 141.373)",
    "rgb": "#e0f6dc",
  },
  "200": {
    "chromakit": "ChromaKit|v1 oklch 0.905 0.093 164.15",
    "color": {
      "alpha": undefined,
      "c": 0.0731154576238753,
      "h": 142.47234631924766,
      "l": 0.905,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 200,
    "oklch": "oklch(90.50% 0.073 142.472)",
    "rgb": "#c4edc0",
  },
  "300": {
    "chromakit": "ChromaKit|v1 oklch 0.845 0.143 164.978",
    "color": {
      "alpha": undefined,
      "c": 0.11242484344316307,
      "h": 143.3003463192477,
      "l": 0.845,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 300,
    "oklch": "oklch(84.50% 0.112 143.300)",
    "rgb": "#a0df9c",
  },
  "400": {
    "chromakit": "ChromaKit|v1 oklch 0.765 0.177 163.223",
    "color": {
      "alpha": undefined,
      "c": 0.13915522580027878,
      "h": 141.5453463192477,
      "l": 0.765,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 400,
    "oklch": "oklch(76.50% 0.139 141.545)",
    "rgb": "#7ec974",
  },
  "50": {
    "chromakit": "ChromaKit|v1 oklch 0.979 0.021 166.113",
    "color": {
      "alpha": undefined,
      "c": 0.016509942044100872,
      "h": 144.43534631924769,
      "l": 0.979,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 50,
    "oklch": "oklch(97.90% 0.017 144.435)",
    "rgb": "#f2fbf1",
  },
  "500": {
    "chromakit": "ChromaKit|v1 oklch 0.696 0.17 162.48",
    "color": {
      "alpha": undefined,
      "c": 0.1336519117855785,
      "h": 140.8023463192477,
      "l": 0.696,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": true,
    "number": 500,
    "oklch": "oklch(69.60% 0.134 140.802)",
    "rgb": "#6cb160",
  },
  "600": {
    "chromakit": "ChromaKit|v1 oklch 0.596 0.145 163.225",
    "color": {
      "alpha": undefined,
      "c": 0.11399721887593459,
      "h": 141.5473463192477,
      "l": 0.596,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 600,
    "oklch": "oklch(59.60% 0.114 141.547)",
    "rgb": "#56904e",
  },
  "700": {
    "chromakit": "ChromaKit|v1 oklch 0.508 0.118 165.612",
    "color": {
      "alpha": undefined,
      "c": 0.09277015053351918,
      "h": 143.93434631924765,
      "l": 0.508,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 700,
    "oklch": "oklch(50.80% 0.093 143.934)",
    "rgb": "#427342",
  },
  "800": {
    "chromakit": "ChromaKit|v1 oklch 0.432 0.095 166.913",
    "color": {
      "alpha": undefined,
      "c": 0.07468783305664681,
      "h": 145.2353463192477,
      "l": 0.432,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 800,
    "oklch": "oklch(43.20% 0.075 145.235)",
    "rgb": "#345b36",
  },
  "900": {
    "chromakit": "ChromaKit|v1 oklch 0.378 0.077 168.94",
    "color": {
      "alpha": undefined,
      "c": 0.060536454161703196,
      "h": 147.26234631924768,
      "l": 0.378,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 900,
    "oklch": "oklch(37.80% 0.061 147.262)",
    "rgb": "#2b4b2f",
  },
  "950": {
    "chromakit": "ChromaKit|v1 oklch 0.262 0.051 172.552",
    "color": {
      "alpha": undefined,
      "c": 0.04009557353567354,
      "h": 150.8743463192477,
      "l": 0.262,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 950,
    "oklch": "oklch(26.20% 0.040 150.874)",
    "rgb": "#152a1a",
  },
  "arrayValues": [
    {
      "chromakit": "ChromaKit|v1 oklch 0.979 0.021 166.113",
      "color": {
        "alpha": undefined,
        "c": 0.016509942044100872,
        "h": 144.43534631924769,
        "l": 0.979,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 50,
      "oklch": "oklch(97.90% 0.017 144.435)",
      "rgb": "#f2fbf1",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.95 0.052 163.051",
      "color": {
        "alpha": undefined,
        "c": 0.0408817612520593,
        "h": 141.37334631924767,
        "l": 0.95,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 100,
      "oklch": "oklch(95.00% 0.041 141.373)",
      "rgb": "#e0f6dc",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.905 0.093 164.15",
      "color": {
        "alpha": undefined,
        "c": 0.0731154576238753,
        "h": 142.47234631924766,
        "l": 0.905,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 200,
      "oklch": "oklch(90.50% 0.073 142.472)",
      "rgb": "#c4edc0",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.845 0.143 164.978",
      "color": {
        "alpha": undefined,
        "c": 0.11242484344316307,
        "h": 143.3003463192477,
        "l": 0.845,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 300,
      "oklch": "oklch(84.50% 0.112 143.300)",
      "rgb": "#a0df9c",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.765 0.177 163.223",
      "color": {
        "alpha": undefined,
        "c": 0.13915522580027878,
        "h": 141.5453463192477,
        "l": 0.765,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 400,
      "oklch": "oklch(76.50% 0.139 141.545)",
      "rgb": "#7ec974",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.696 0.17 162.48",
      "color": {
        "alpha": undefined,
        "c": 0.1336519117855785,
        "h": 140.8023463192477,
        "l": 0.696,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": true,
      "number": 500,
      "oklch": "oklch(69.60% 0.134 140.802)",
      "rgb": "#6cb160",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.596 0.145 163.225",
      "color": {
        "alpha": undefined,
        "c": 0.11399721887593459,
        "h": 141.5473463192477,
        "l": 0.596,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 600,
      "oklch": "oklch(59.60% 0.114 141.547)",
      "rgb": "#56904e",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.508 0.118 165.612",
      "color": {
        "alpha": undefined,
        "c": 0.09277015053351918,
        "h": 143.93434631924765,
        "l": 0.508,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 700,
      "oklch": "oklch(50.80% 0.093 143.934)",
      "rgb": "#427342",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.432 0.095 166.913",
      "color": {
        "alpha": undefined,
        "c": 0.07468783305664681,
        "h": 145.2353463192477,
        "l": 0.432,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 800,
      "oklch": "oklch(43.20% 0.075 145.235)",
      "rgb": "#345b36",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.378 0.077 168.94",
      "color": {
        "alpha": undefined,
        "c": 0.060536454161703196,
        "h": 147.26234631924768,
        "l": 0.378,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 900,
      "oklch": "oklch(37.80% 0.061 147.262)",
      "rgb": "#2b4b2f",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.262 0.051 172.552",
      "color": {
        "alpha": undefined,
        "c": 0.04009557353567354,
        "h": 150.8743463192477,
        "l": 0.262,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 950,
      "oklch": "oklch(26.20% 0.040 150.874)",
      "rgb": "#152a1a",
    },
  ],
}
`;

exports[`Color Palettes Plugin - Palette Generation > generatePalette > should accurately parse and generate a palette without alterations preserving the original color 1`] = `
{
  "100": {
    "chromakit": "ChromaKit|v1 oklch 0.95 0.052 163.051",
    "color": {
      "alpha": undefined,
      "c": 0.0408817612520593,
      "h": 141.37334631924767,
      "l": 0.95,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 100,
    "oklch": "oklch(95.00% 0.041 141.373)",
    "rgb": "#e0f6dc",
  },
  "200": {
    "chromakit": "ChromaKit|v1 oklch 0.905 0.093 164.15",
    "color": {
      "alpha": undefined,
      "c": 0.0731154576238753,
      "h": 142.47234631924766,
      "l": 0.905,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 200,
    "oklch": "oklch(90.50% 0.073 142.472)",
    "rgb": "#c4edc0",
  },
  "300": {
    "chromakit": "ChromaKit|v1 oklch 0.845 0.143 164.978",
    "color": {
      "alpha": undefined,
      "c": 0.11242484344316307,
      "h": 143.3003463192477,
      "l": 0.845,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 300,
    "oklch": "oklch(84.50% 0.112 143.300)",
    "rgb": "#a0df9c",
  },
  "400": {
    "chromakit": "ChromaKit|v1 oklch 0.765 0.177 163.223",
    "color": {
      "alpha": undefined,
      "c": 0.13915522580027878,
      "h": 141.5453463192477,
      "l": 0.765,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 400,
    "oklch": "oklch(76.50% 0.139 141.545)",
    "rgb": "#7ec974",
  },
  "50": {
    "chromakit": "ChromaKit|v1 oklch 0.979 0.021 166.113",
    "color": {
      "alpha": undefined,
      "c": 0.016509942044100872,
      "h": 144.43534631924769,
      "l": 0.979,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 50,
    "oklch": "oklch(97.90% 0.017 144.435)",
    "rgb": "#f2fbf1",
  },
  "500": {
    "chromakit": "ChromaKit|v1 oklch 0.6853745392013604 0.1336519117855785 140.8023463192477",
    "color": {
      "alpha": undefined,
      "c": 0.1336519117855785,
      "h": 140.8023463192477,
      "l": 0.6853745392013604,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": true,
    "number": 500,
    "oklch": "oklch(68.54% 0.134 140.802)",
    "rgb": "#69ae5d",
  },
  "600": {
    "chromakit": "ChromaKit|v1 oklch 0.596 0.145 163.225",
    "color": {
      "alpha": undefined,
      "c": 0.11399721887593459,
      "h": 141.5473463192477,
      "l": 0.596,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 600,
    "oklch": "oklch(59.60% 0.114 141.547)",
    "rgb": "#56904e",
  },
  "700": {
    "chromakit": "ChromaKit|v1 oklch 0.508 0.118 165.612",
    "color": {
      "alpha": undefined,
      "c": 0.09277015053351918,
      "h": 143.93434631924765,
      "l": 0.508,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 700,
    "oklch": "oklch(50.80% 0.093 143.934)",
    "rgb": "#427342",
  },
  "800": {
    "chromakit": "ChromaKit|v1 oklch 0.432 0.095 166.913",
    "color": {
      "alpha": undefined,
      "c": 0.07468783305664681,
      "h": 145.2353463192477,
      "l": 0.432,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 800,
    "oklch": "oklch(43.20% 0.075 145.235)",
    "rgb": "#345b36",
  },
  "900": {
    "chromakit": "ChromaKit|v1 oklch 0.378 0.077 168.94",
    "color": {
      "alpha": undefined,
      "c": 0.060536454161703196,
      "h": 147.26234631924768,
      "l": 0.378,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 900,
    "oklch": "oklch(37.80% 0.061 147.262)",
    "rgb": "#2b4b2f",
  },
  "950": {
    "chromakit": "ChromaKit|v1 oklch 0.262 0.051 172.552",
    "color": {
      "alpha": undefined,
      "c": 0.04009557353567354,
      "h": 150.8743463192477,
      "l": 0.262,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 950,
    "oklch": "oklch(26.20% 0.040 150.874)",
    "rgb": "#152a1a",
  },
  "arrayValues": [
    {
      "chromakit": "ChromaKit|v1 oklch 0.979 0.021 166.113",
      "color": {
        "alpha": undefined,
        "c": 0.016509942044100872,
        "h": 144.43534631924769,
        "l": 0.979,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 50,
      "oklch": "oklch(97.90% 0.017 144.435)",
      "rgb": "#f2fbf1",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.95 0.052 163.051",
      "color": {
        "alpha": undefined,
        "c": 0.0408817612520593,
        "h": 141.37334631924767,
        "l": 0.95,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 100,
      "oklch": "oklch(95.00% 0.041 141.373)",
      "rgb": "#e0f6dc",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.905 0.093 164.15",
      "color": {
        "alpha": undefined,
        "c": 0.0731154576238753,
        "h": 142.47234631924766,
        "l": 0.905,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 200,
      "oklch": "oklch(90.50% 0.073 142.472)",
      "rgb": "#c4edc0",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.845 0.143 164.978",
      "color": {
        "alpha": undefined,
        "c": 0.11242484344316307,
        "h": 143.3003463192477,
        "l": 0.845,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 300,
      "oklch": "oklch(84.50% 0.112 143.300)",
      "rgb": "#a0df9c",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.765 0.177 163.223",
      "color": {
        "alpha": undefined,
        "c": 0.13915522580027878,
        "h": 141.5453463192477,
        "l": 0.765,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 400,
      "oklch": "oklch(76.50% 0.139 141.545)",
      "rgb": "#7ec974",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.6853745392013604 0.1336519117855785 140.8023463192477",
      "color": {
        "alpha": undefined,
        "c": 0.1336519117855785,
        "h": 140.8023463192477,
        "l": 0.6853745392013604,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": true,
      "number": 500,
      "oklch": "oklch(68.54% 0.134 140.802)",
      "rgb": "#69ae5d",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.596 0.145 163.225",
      "color": {
        "alpha": undefined,
        "c": 0.11399721887593459,
        "h": 141.5473463192477,
        "l": 0.596,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 600,
      "oklch": "oklch(59.60% 0.114 141.547)",
      "rgb": "#56904e",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.508 0.118 165.612",
      "color": {
        "alpha": undefined,
        "c": 0.09277015053351918,
        "h": 143.93434631924765,
        "l": 0.508,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 700,
      "oklch": "oklch(50.80% 0.093 143.934)",
      "rgb": "#427342",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.432 0.095 166.913",
      "color": {
        "alpha": undefined,
        "c": 0.07468783305664681,
        "h": 145.2353463192477,
        "l": 0.432,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 800,
      "oklch": "oklch(43.20% 0.075 145.235)",
      "rgb": "#345b36",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.378 0.077 168.94",
      "color": {
        "alpha": undefined,
        "c": 0.060536454161703196,
        "h": 147.26234631924768,
        "l": 0.378,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 900,
      "oklch": "oklch(37.80% 0.061 147.262)",
      "rgb": "#2b4b2f",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.262 0.051 172.552",
      "color": {
        "alpha": undefined,
        "c": 0.04009557353567354,
        "h": 150.8743463192477,
        "l": 0.262,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 950,
      "oklch": "oklch(26.20% 0.040 150.874)",
      "rgb": "#152a1a",
    },
  ],
}
`;

exports[`Color Palettes Plugin - Palette Generation > generatePalette > should generate an adjusted, Tailwind v4-based, color-assured palette by default 1`] = `
{
  "100": {
    "chromakit": "ChromaKit|v1 oklch 0.95 0.052 163.051",
    "color": {
      "alpha": undefined,
      "c": 0.04386377581815611,
      "h": 141.3546194999646,
      "l": 0.946443423870834,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 100,
    "oklch": "oklch(94.64% 0.044 141.355)",
    "rgb": "#def5da",
  },
  "200": {
    "chromakit": "ChromaKit|v1 oklch 0.905 0.093 164.15",
    "color": {
      "alpha": undefined,
      "c": 0.07860399088432864,
      "h": 142.43741670676815,
      "l": 0.8981363978457823,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 200,
    "oklch": "oklch(89.81% 0.079 142.437)",
    "rgb": "#c0ebbb",
  },
  "300": {
    "chromakit": "ChromaKit|v1 oklch 0.845 0.143 164.978",
    "color": {
      "alpha": undefined,
      "c": 0.12807970793998427,
      "h": 143.1539356868069,
      "l": 0.8242673184204253,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 300,
    "oklch": "oklch(82.43% 0.128 143.154)",
    "rgb": "#92db8e",
  },
  "400": {
    "chromakit": "ChromaKit|v1 oklch 0.765 0.177 163.223",
    "color": {
      "alpha": undefined,
      "c": 0.15263407596405582,
      "h": 141.48519143051783,
      "l": 0.7419000113784764,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 400,
    "oklch": "oklch(74.19% 0.153 141.485)",
    "rgb": "#70c365",
  },
  "50": {
    "chromakit": "ChromaKit|v1 oklch 0.979 0.021 166.113",
    "color": {
      "alpha": undefined,
      "c": 0.019768163273517703,
      "h": 144.35067103576398,
      "l": 0.9749159564630707,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 50,
    "oklch": "oklch(97.49% 0.020 144.351)",
    "rgb": "#effbef",
  },
  "500": {
    "chromakit": "ChromaKit|v1 oklch 0.6853745392013604 0.1336519117855785 140.8023463192477",
    "color": {
      "alpha": undefined,
      "c": 0.1336519117855785,
      "h": 140.8023463192477,
      "l": 0.6853745392013604,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": true,
    "number": 500,
    "oklch": "oklch(68.54% 0.134 140.802)",
    "rgb": "#69ae5d",
  },
  "600": {
    "chromakit": "ChromaKit|v1 oklch 0.596 0.145 163.225",
    "color": {
      "alpha": undefined,
      "c": 0.11454018489892535,
      "h": 141.5470881707392,
      "l": 0.5985350626260156,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 600,
    "oklch": "oklch(59.85% 0.115 141.547)",
    "rgb": "#56914e",
  },
  "700": {
    "chromakit": "ChromaKit|v1 oklch 0.508 0.118 165.612",
    "color": {
      "alpha": undefined,
      "c": 0.0938719450642882,
      "h": 143.9318312779427,
      "l": 0.5132394133765646,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 700,
    "oklch": "oklch(51.32% 0.094 143.932)",
    "rgb": "#437543",
  },
  "800": {
    "chromakit": "ChromaKit|v1 oklch 0.432 0.095 166.913",
    "color": {
      "alpha": undefined,
      "c": 0.07641550850861428,
      "h": 145.2277757205112,
      "l": 0.44037288913123795,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 800,
    "oklch": "oklch(44.04% 0.076 145.228)",
    "rgb": "#365e38",
  },
  "900": {
    "chromakit": "ChromaKit|v1 oklch 0.378 0.077 168.94",
    "color": {
      "alpha": undefined,
      "c": 0.06254623365679282,
      "h": 147.24622813365517,
      "l": 0.3881312254057823,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 900,
    "oklch": "oklch(38.81% 0.063 147.246)",
    "rgb": "#2c4e31",
  },
  "950": {
    "chromakit": "ChromaKit|v1 oklch 0.262 0.051 172.552",
    "color": {
      "alpha": undefined,
      "c": 0.04332797527372658,
      "h": 150.79027825002555,
      "l": 0.2768342611271985,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 950,
    "oklch": "oklch(27.68% 0.043 150.790)",
    "rgb": "#172e1d",
  },
  "arrayValues": [
    {
      "chromakit": "ChromaKit|v1 oklch 0.979 0.021 166.113",
      "color": {
        "alpha": undefined,
        "c": 0.019768163273517703,
        "h": 144.35067103576398,
        "l": 0.9749159564630707,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 50,
      "oklch": "oklch(97.49% 0.020 144.351)",
      "rgb": "#effbef",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.95 0.052 163.051",
      "color": {
        "alpha": undefined,
        "c": 0.04386377581815611,
        "h": 141.3546194999646,
        "l": 0.946443423870834,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 100,
      "oklch": "oklch(94.64% 0.044 141.355)",
      "rgb": "#def5da",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.905 0.093 164.15",
      "color": {
        "alpha": undefined,
        "c": 0.07860399088432864,
        "h": 142.43741670676815,
        "l": 0.8981363978457823,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 200,
      "oklch": "oklch(89.81% 0.079 142.437)",
      "rgb": "#c0ebbb",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.845 0.143 164.978",
      "color": {
        "alpha": undefined,
        "c": 0.12807970793998427,
        "h": 143.1539356868069,
        "l": 0.8242673184204253,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 300,
      "oklch": "oklch(82.43% 0.128 143.154)",
      "rgb": "#92db8e",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.765 0.177 163.223",
      "color": {
        "alpha": undefined,
        "c": 0.15263407596405582,
        "h": 141.48519143051783,
        "l": 0.7419000113784764,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 400,
      "oklch": "oklch(74.19% 0.153 141.485)",
      "rgb": "#70c365",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.6853745392013604 0.1336519117855785 140.8023463192477",
      "color": {
        "alpha": undefined,
        "c": 0.1336519117855785,
        "h": 140.8023463192477,
        "l": 0.6853745392013604,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": true,
      "number": 500,
      "oklch": "oklch(68.54% 0.134 140.802)",
      "rgb": "#69ae5d",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.596 0.145 163.225",
      "color": {
        "alpha": undefined,
        "c": 0.11454018489892535,
        "h": 141.5470881707392,
        "l": 0.5985350626260156,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 600,
      "oklch": "oklch(59.85% 0.115 141.547)",
      "rgb": "#56914e",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.508 0.118 165.612",
      "color": {
        "alpha": undefined,
        "c": 0.0938719450642882,
        "h": 143.9318312779427,
        "l": 0.5132394133765646,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 700,
      "oklch": "oklch(51.32% 0.094 143.932)",
      "rgb": "#437543",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.432 0.095 166.913",
      "color": {
        "alpha": undefined,
        "c": 0.07641550850861428,
        "h": 145.2277757205112,
        "l": 0.44037288913123795,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 800,
      "oklch": "oklch(44.04% 0.076 145.228)",
      "rgb": "#365e38",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.378 0.077 168.94",
      "color": {
        "alpha": undefined,
        "c": 0.06254623365679282,
        "h": 147.24622813365517,
        "l": 0.3881312254057823,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 900,
      "oklch": "oklch(38.81% 0.063 147.246)",
      "rgb": "#2c4e31",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.262 0.051 172.552",
      "color": {
        "alpha": undefined,
        "c": 0.04332797527372658,
        "h": 150.79027825002555,
        "l": 0.2768342611271985,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 950,
      "oklch": "oklch(27.68% 0.043 150.790)",
      "rgb": "#172e1d",
    },
  ],
}
`;

exports[`Color Palettes Plugin - Palette Generation > generateTailwindPalette > should generate an adjusted, Tailwind v4-based, color-assured palette 1`] = `
{
  "100": {
    "chromakit": "ChromaKit|v1 oklch 0.95 0.052 163.051",
    "color": {
      "alpha": undefined,
      "c": 0.04386377581815611,
      "h": 141.3546194999646,
      "l": 0.946443423870834,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 100,
    "oklch": "oklch(94.64% 0.044 141.355)",
    "rgb": "#def5da",
  },
  "200": {
    "chromakit": "ChromaKit|v1 oklch 0.905 0.093 164.15",
    "color": {
      "alpha": undefined,
      "c": 0.07860399088432864,
      "h": 142.43741670676815,
      "l": 0.8981363978457823,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 200,
    "oklch": "oklch(89.81% 0.079 142.437)",
    "rgb": "#c0ebbb",
  },
  "300": {
    "chromakit": "ChromaKit|v1 oklch 0.845 0.143 164.978",
    "color": {
      "alpha": undefined,
      "c": 0.12807970793998427,
      "h": 143.1539356868069,
      "l": 0.8242673184204253,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 300,
    "oklch": "oklch(82.43% 0.128 143.154)",
    "rgb": "#92db8e",
  },
  "400": {
    "chromakit": "ChromaKit|v1 oklch 0.765 0.177 163.223",
    "color": {
      "alpha": undefined,
      "c": 0.15263407596405582,
      "h": 141.48519143051783,
      "l": 0.7419000113784764,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 400,
    "oklch": "oklch(74.19% 0.153 141.485)",
    "rgb": "#70c365",
  },
  "50": {
    "chromakit": "ChromaKit|v1 oklch 0.979 0.021 166.113",
    "color": {
      "alpha": undefined,
      "c": 0.019768163273517703,
      "h": 144.35067103576398,
      "l": 0.9749159564630707,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 50,
    "oklch": "oklch(97.49% 0.020 144.351)",
    "rgb": "#effbef",
  },
  "500": {
    "chromakit": "ChromaKit|v1 oklch 0.6853745392013604 0.1336519117855785 140.8023463192477",
    "color": {
      "alpha": undefined,
      "c": 0.1336519117855785,
      "h": 140.8023463192477,
      "l": 0.6853745392013604,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": true,
    "number": 500,
    "oklch": "oklch(68.54% 0.134 140.802)",
    "rgb": "#69ae5d",
  },
  "600": {
    "chromakit": "ChromaKit|v1 oklch 0.596 0.145 163.225",
    "color": {
      "alpha": undefined,
      "c": 0.11454018489892535,
      "h": 141.5470881707392,
      "l": 0.5985350626260156,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 600,
    "oklch": "oklch(59.85% 0.115 141.547)",
    "rgb": "#56914e",
  },
  "700": {
    "chromakit": "ChromaKit|v1 oklch 0.508 0.118 165.612",
    "color": {
      "alpha": undefined,
      "c": 0.0938719450642882,
      "h": 143.9318312779427,
      "l": 0.5132394133765646,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 700,
    "oklch": "oklch(51.32% 0.094 143.932)",
    "rgb": "#437543",
  },
  "800": {
    "chromakit": "ChromaKit|v1 oklch 0.432 0.095 166.913",
    "color": {
      "alpha": undefined,
      "c": 0.07641550850861428,
      "h": 145.2277757205112,
      "l": 0.44037288913123795,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 800,
    "oklch": "oklch(44.04% 0.076 145.228)",
    "rgb": "#365e38",
  },
  "900": {
    "chromakit": "ChromaKit|v1 oklch 0.378 0.077 168.94",
    "color": {
      "alpha": undefined,
      "c": 0.06254623365679282,
      "h": 147.24622813365517,
      "l": 0.3881312254057823,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 900,
    "oklch": "oklch(38.81% 0.063 147.246)",
    "rgb": "#2c4e31",
  },
  "950": {
    "chromakit": "ChromaKit|v1 oklch 0.262 0.051 172.552",
    "color": {
      "alpha": undefined,
      "c": 0.04332797527372658,
      "h": 150.79027825002555,
      "l": 0.2768342611271985,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 950,
    "oklch": "oklch(27.68% 0.043 150.790)",
    "rgb": "#172e1d",
  },
  "arrayValues": [
    {
      "chromakit": "ChromaKit|v1 oklch 0.979 0.021 166.113",
      "color": {
        "alpha": undefined,
        "c": 0.019768163273517703,
        "h": 144.35067103576398,
        "l": 0.9749159564630707,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 50,
      "oklch": "oklch(97.49% 0.020 144.351)",
      "rgb": "#effbef",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.95 0.052 163.051",
      "color": {
        "alpha": undefined,
        "c": 0.04386377581815611,
        "h": 141.3546194999646,
        "l": 0.946443423870834,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 100,
      "oklch": "oklch(94.64% 0.044 141.355)",
      "rgb": "#def5da",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.905 0.093 164.15",
      "color": {
        "alpha": undefined,
        "c": 0.07860399088432864,
        "h": 142.43741670676815,
        "l": 0.8981363978457823,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 200,
      "oklch": "oklch(89.81% 0.079 142.437)",
      "rgb": "#c0ebbb",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.845 0.143 164.978",
      "color": {
        "alpha": undefined,
        "c": 0.12807970793998427,
        "h": 143.1539356868069,
        "l": 0.8242673184204253,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 300,
      "oklch": "oklch(82.43% 0.128 143.154)",
      "rgb": "#92db8e",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.765 0.177 163.223",
      "color": {
        "alpha": undefined,
        "c": 0.15263407596405582,
        "h": 141.48519143051783,
        "l": 0.7419000113784764,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 400,
      "oklch": "oklch(74.19% 0.153 141.485)",
      "rgb": "#70c365",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.6853745392013604 0.1336519117855785 140.8023463192477",
      "color": {
        "alpha": undefined,
        "c": 0.1336519117855785,
        "h": 140.8023463192477,
        "l": 0.6853745392013604,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": true,
      "number": 500,
      "oklch": "oklch(68.54% 0.134 140.802)",
      "rgb": "#69ae5d",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.596 0.145 163.225",
      "color": {
        "alpha": undefined,
        "c": 0.11454018489892535,
        "h": 141.5470881707392,
        "l": 0.5985350626260156,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 600,
      "oklch": "oklch(59.85% 0.115 141.547)",
      "rgb": "#56914e",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.508 0.118 165.612",
      "color": {
        "alpha": undefined,
        "c": 0.0938719450642882,
        "h": 143.9318312779427,
        "l": 0.5132394133765646,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 700,
      "oklch": "oklch(51.32% 0.094 143.932)",
      "rgb": "#437543",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.432 0.095 166.913",
      "color": {
        "alpha": undefined,
        "c": 0.07641550850861428,
        "h": 145.2277757205112,
        "l": 0.44037288913123795,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 800,
      "oklch": "oklch(44.04% 0.076 145.228)",
      "rgb": "#365e38",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.378 0.077 168.94",
      "color": {
        "alpha": undefined,
        "c": 0.06254623365679282,
        "h": 147.24622813365517,
        "l": 0.3881312254057823,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 900,
      "oklch": "oklch(38.81% 0.063 147.246)",
      "rgb": "#2c4e31",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.262 0.051 172.552",
      "color": {
        "alpha": undefined,
        "c": 0.04332797527372658,
        "h": 150.79027825002555,
        "l": 0.2768342611271985,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 950,
      "oklch": "oklch(27.68% 0.043 150.790)",
      "rgb": "#172e1d",
    },
  ],
}
`;

exports[`Color Palettes Plugin - Palette Generation > generateTailwindPalette > should handle generation of color palettes with out of sRGB gamut inputs 1`] = `
{
  "100": {
    "chromakit": "ChromaKit|v1 oklch 0.952 0.037 318.852",
    "color": {
      "alpha": undefined,
      "c": 0.037523479257417065,
      "h": 325.9148573539472,
      "l": 0.9557843648770865,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 100,
    "oklch": "oklch(95.58% 0.038 325.915)",
    "rgb": "#fee8fe",
  },
  "200": {
    "chromakit": "ChromaKit|v1 oklch 0.903 0.076 319.62",
    "color": {
      "alpha": undefined,
      "c": 0.07514834546895563,
      "h": 326.6091689237307,
      "l": 0.9152609955396601,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 200,
    "oklch": "oklch(91.53% 0.075 326.609)",
    "rgb": "#fed2fe",
  },
  "300": {
    "chromakit": "ChromaKit|v1 oklch 0.833 0.145 321.434",
    "color": {
      "alpha": undefined,
      "c": 0.1338283598535826,
      "h": 328.30235195786946,
      "l": 0.8533978819230327,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 300,
    "oklch": "oklch(85.34% 0.134 328.302)",
    "rgb": "#ffaffb",
  },
  "400": {
    "chromakit": "ChromaKit|v1 oklch 0.74 0.238 322.16",
    "color": {
      "alpha": undefined,
      "c": 0.2140609119343217,
      "h": 328.67091057340554,
      "l": 0.7818156744559815,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 400,
    "oklch": "oklch(78.18% 0.214 328.671)",
    "rgb": "#ff7efa",
  },
  "50": {
    "chromakit": "ChromaKit|v1 oklch 0.977 0.017 320.058",
    "color": {
      "alpha": undefined,
      "c": 0.016434070405658335,
      "h": 327.1082501193238,
      "l": 0.9791080043578444,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 50,
    "oklch": "oklch(97.91% 0.016 327.108)",
    "rgb": "#fff4fe",
  },
  "500": {
    "chromakit": "ChromaKit|v1 oklch 0.667 0.295 322.15",
    "color": {
      "alpha": undefined,
      "c": 0.2918275302102557,
      "h": 328.81941258210685,
      "l": 0.7201956992486159,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 500,
    "oklch": "oklch(72.02% 0.292 328.819)",
    "rgb": "#ff3efb",
  },
  "600": {
    "chromakit": "ChromaKit|v1 oklch 0.55 0.45 330",
    "color": {
      "alpha": undefined,
      "c": 0.45,
      "h": 330,
      "l": 0.55,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": true,
    "number": 600,
    "oklch": "oklch(55.00% 0.450 330.000)",
    "rgb": "#fa00fa",
  },
  "700": {
    "chromakit": "ChromaKit|v1 oklch 0.518 0.253 323.949",
    "color": {
      "alpha": undefined,
      "c": 0.24329070687693688,
      "h": 331.0631373846234,
      "l": 0.5372508129957315,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 700,
    "oklch": "oklch(53.73% 0.243 331.063)",
    "rgb": "#b501ac",
  },
  "800": {
    "chromakit": "ChromaKit|v1 oklch 0.452 0.211 324.591",
    "color": {
      "alpha": undefined,
      "c": 0.2060307495086623,
      "h": 331.6990351643963,
      "l": 0.45636298186066304,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 800,
    "oklch": "oklch(45.64% 0.206 331.699)",
    "rgb": "#920088",
  },
  "900": {
    "chromakit": "ChromaKit|v1 oklch 0.401 0.17 325.612",
    "color": {
      "alpha": undefined,
      "c": 0.17786611862005286,
      "h": 332.71152221952957,
      "l": 0.3982762467245355,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 900,
    "oklch": "oklch(39.83% 0.178 332.712)",
    "rgb": "#79026f",
  },
  "950": {
    "chromakit": "ChromaKit|v1 oklch 0.293 0.136 325.661",
    "color": {
      "alpha": undefined,
      "c": 0.12368325315627766,
      "h": 332.7044637266886,
      "l": 0.27697968411087237,
      "space": "oklch",
      "to": [Function],
      "toCSSString": [Function],
      "toString": [Function],
    },
    "isBase": false,
    "number": 950,
    "oklch": "oklch(27.70% 0.124 332.704)",
    "rgb": "#480141",
  },
  "arrayValues": [
    {
      "chromakit": "ChromaKit|v1 oklch 0.977 0.017 320.058",
      "color": {
        "alpha": undefined,
        "c": 0.016434070405658335,
        "h": 327.1082501193238,
        "l": 0.9791080043578444,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 50,
      "oklch": "oklch(97.91% 0.016 327.108)",
      "rgb": "#fff4fe",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.952 0.037 318.852",
      "color": {
        "alpha": undefined,
        "c": 0.037523479257417065,
        "h": 325.9148573539472,
        "l": 0.9557843648770865,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 100,
      "oklch": "oklch(95.58% 0.038 325.915)",
      "rgb": "#fee8fe",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.903 0.076 319.62",
      "color": {
        "alpha": undefined,
        "c": 0.07514834546895563,
        "h": 326.6091689237307,
        "l": 0.9152609955396601,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 200,
      "oklch": "oklch(91.53% 0.075 326.609)",
      "rgb": "#fed2fe",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.833 0.145 321.434",
      "color": {
        "alpha": undefined,
        "c": 0.1338283598535826,
        "h": 328.30235195786946,
        "l": 0.8533978819230327,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 300,
      "oklch": "oklch(85.34% 0.134 328.302)",
      "rgb": "#ffaffb",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.74 0.238 322.16",
      "color": {
        "alpha": undefined,
        "c": 0.2140609119343217,
        "h": 328.67091057340554,
        "l": 0.7818156744559815,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 400,
      "oklch": "oklch(78.18% 0.214 328.671)",
      "rgb": "#ff7efa",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.667 0.295 322.15",
      "color": {
        "alpha": undefined,
        "c": 0.2918275302102557,
        "h": 328.81941258210685,
        "l": 0.7201956992486159,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 500,
      "oklch": "oklch(72.02% 0.292 328.819)",
      "rgb": "#ff3efb",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.55 0.45 330",
      "color": {
        "alpha": undefined,
        "c": 0.45,
        "h": 330,
        "l": 0.55,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": true,
      "number": 600,
      "oklch": "oklch(55.00% 0.450 330.000)",
      "rgb": "#fa00fa",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.518 0.253 323.949",
      "color": {
        "alpha": undefined,
        "c": 0.24329070687693688,
        "h": 331.0631373846234,
        "l": 0.5372508129957315,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 700,
      "oklch": "oklch(53.73% 0.243 331.063)",
      "rgb": "#b501ac",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.452 0.211 324.591",
      "color": {
        "alpha": undefined,
        "c": 0.2060307495086623,
        "h": 331.6990351643963,
        "l": 0.45636298186066304,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 800,
      "oklch": "oklch(45.64% 0.206 331.699)",
      "rgb": "#920088",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.401 0.17 325.612",
      "color": {
        "alpha": undefined,
        "c": 0.17786611862005286,
        "h": 332.71152221952957,
        "l": 0.3982762467245355,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 900,
      "oklch": "oklch(39.83% 0.178 332.712)",
      "rgb": "#79026f",
    },
    {
      "chromakit": "ChromaKit|v1 oklch 0.293 0.136 325.661",
      "color": {
        "alpha": undefined,
        "c": 0.12368325315627766,
        "h": 332.7044637266886,
        "l": 0.27697968411087237,
        "space": "oklch",
        "to": [Function],
        "toCSSString": [Function],
        "toString": [Function],
      },
      "isBase": false,
      "number": 950,
      "oklch": "oklch(27.70% 0.124 332.704)",
      "rgb": "#480141",
    },
  ],
}
`;
